# stock-picker

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  deploy.sh
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  run.py  send_stock_analysis.py
backend/app/: main.py
backend/app/api/: ai_picks.py  alerts.py  backtest.py  factors.py  health.py  monitor.py  ranking.py  sectors.py  stocks.py  strategy.py  trading.py  wechat.py
backend/app/core/: cache.py  config.py  database.py  logging.py  redis.py  scheduler.py  websocket.py
backend/app/models/: __init__.py  ai_pick.py  alert.py  stock.py  trading.py
backend/app/schemas/: __init__.py  stock.py
backend/app/services/: ai_pick_service.py  ai_report_service.py  alert_service.py  backtest.py  capital_flow.py  data_service.py  factor_computation.py  factor_config.py  factor_engine.py  notification_service.py  ranking_service.py  sector_service.py  strategy_loader.py  trading_service.py  wechat_bot.py
backend/app/services/data_providers/: __init__.py  akshare_provider.py  base.py  eastmoney_provider.py  manager.py  sina_provider.py  ths_provider.py
backend/strategies/: default.yaml  momentum.yaml  value.yaml
backend/tests/: conftest.py  test_api.py  test_factor_engine.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
scripts/: com.stockpicker.backend.plist  docker-compose.dev.yml  run.py  run.sh  tunnel.sh
(+38 files in other folders)
